--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-KEY_ID = "rzp_test_7huAkwM4Ddht7y"
-KEY_SECRET = "BEePLcgmNvPCEMe98DNVzGRR"
+KEY_ID = "rzp_test_Xcv0GqvYuXJBi3";
+KEY_SECRET = "m93P5O0pgTJBZDWVj7leMq4k"
