--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-KEY_ID = "rzp_test_Xcv0GqvYuXJBi3";
-KEY_SECRET = "m93P5O0pgTJBZDWVj7leMq4k"
+KEY_ID = "rzp_test_mGGsDwW7xRGWWm";
+KEY_SECRET = "dcVrXWziSMbSMpUbKb8XgVLT"
